Enable J16 preview features